# oops

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.claude/: settings.json
.claude/skills/check/: SKILL.md
.claude/skills/draft/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: pages.yml  release-pr.yml  release-tag.yml  release.yml  test.yml
crates/oops-cli/: Cargo.toml
crates/oops-cli/src/: cli.rs  main.rs  op.rs  ui.rs
crates/oops-cli/src/commands/: drill.rs  free.rs  mod.rs  overview.rs  sweep.rs  top.rs  tree.rs  update.rs  volumes.rs
crates/oops-core/: Cargo.toml
crates/oops-core/src/: lib.rs  scan.rs  sweep.rs  volume.rs
docs/: CONTRIBUTING.md  PATTERNS.md  SUCCESS_CRITERIA.md  index.md
wiki/: Makefile  _config.yml  llms.txt
wiki/_data/: nav.yml
wiki/_docs/: commands.md  how-it-works.md  install.md  overview.md  recipes.md  sparse-files.md
wiki/_includes/: copy.html  footer.html  head.html  header.html  sidebar.html
wiki/_layouts/: doc.html  home.html
wiki/_plugins/: raw_docs.rb
wiki/assets/css/: main.css
