[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/krondor-corp/oops"
description = "Fast disk usage diagnostics for macOS and Unix"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
crossterm = "0.29"

# Parallelism
rayon = "1"

# Utilities
bytesize = "2"

# Internal crates
oops-core = { path = "crates/oops-core" }
oops-cli = { path = "crates/oops-cli" }
