[package]
name = "oops-core"
description = "Core disk usage scanning and analysis library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bytesize.workspace = true
tracing.workspace = true
